--- a/pyton_001.ipynb
+++ b/pyton_001.ipynb
@@ -39,7 +39,7 @@
       "cell_type": "code",
       "source": [
         "print(\"Hello Github\")\n",
-        "print(\"Hello python\")"
+        "print(\"Hello Python\")"
       ],
       "metadata": {
         "colab": {
