Colaboratory를 통해 생성됨

--- a/pyton_001.ipynb
+++ b/pyton_001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0KN4LbFnYQjU0wRz4XOjc",
+      "authorship_tag": "ABX9TyMJgTWhFSbb6XiaPwDPugi7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,16 +46,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5p89BbHLmziK",
-        "outputId": "a81699c3-cd0c-4236-e78b-13e2422440f1"
+        "outputId": "af09f39f-5659-49bb-e665-89c3d64a3cc0"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Hello Github\n",
-            "Hello python\n"
+            "Hello Python\n"
           ]
         }
       ]
