Colaboratory를 통해 생성됨

--- a/pyton_001.ipynb
+++ b/pyton_001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJgTWhFSbb6XiaPwDPugi7",
+      "authorship_tag": "ABX9TyNZCF+WFTtE6kQKHKO98hye",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,23 +39,27 @@
       "cell_type": "code",
       "source": [
         "print(\"Hello Github\")\n",
-        "print(\"Hello Python\")"
+        "print(\"Hello Python\")\n",
+        "print(\"안녕하세요?\")\n",
+        "print(\"Programing에 입문하신것을 축하드립니다.\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5p89BbHLmziK",
-        "outputId": "af09f39f-5659-49bb-e665-89c3d64a3cc0"
+        "outputId": "7992ae03-e24b-4c9c-bf58-fbb5e50c3189"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Hello Github\n",
-            "Hello Python\n"
+            "Hello Python\n",
+            "안녕하세요?\n",
+            "Programing에 입문하신것을 축하드립니다.\n"
           ]
         }
       ]
