Colaboratory를 통해 생성됨

--- a/pyton_001.ipynb
+++ b/pyton_001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZCF+WFTtE6kQKHKO98hye",
+      "authorship_tag": "ABX9TyPxd7e3mwrnTxZ/oCrGxk2v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,167 @@
             "Hello Python\n",
             "안녕하세요?\n",
             "Programing에 입문하신것을 축하드립니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(5+6)\n",
+        "print(5-3)\n",
+        "print(5/3)\n",
+        "print(5//3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZmZNE9p-p8Un",
+        "outputId": "f68e5991-7880-4c28-fa91-8b6e4b499811"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11\n",
+            "2\n",
+            "1.6666666666666667\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"사랑해\" * 10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kTPd6fVDq6iB",
+        "outputId": "bf035660-40d7-4dd0-97b7-12dbe2eb79c3"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "사랑해사랑해사랑해사랑해사랑해사랑해사랑해사랑해사랑해사랑해\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ftemp = 90.0\n",
+        "ctemp = ((ftemp-32.0)* 5.0/9.0)\n",
+        "print(ctemp)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VtW9JpmwrsI4",
+        "outputId": "cac8486e-51c5-424b-f3c9-7dff9262f809"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32.22222222222222\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 200\n",
+        "x = 100\n",
+        "print(x)\n",
+        "\n",
+        "x = 100\n",
+        "y = 200\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Fo2OB1KvTQK",
+        "outputId": "e37118a1-842b-48b6-ab0a-f587b5f159f0"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n",
+            "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 100\n",
+        "y = 200\n",
+        "z=(x+y)\n",
+        "print(z)\n",
+        "print(x+y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M3W-hIcmvlmH",
+        "outputId": "bbaef401-640a-4be1-8156-7e37ca5009a7"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "300\n",
+            "300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 100\n",
+        "y = 200\n",
+        "sum=x+y\n",
+        "print(x,\"과\",y,\"의 합은\",sum,\"입니다.\" )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5iLUfwtlzPIW",
+        "outputId": "a3d366a4-5656-47ca-ec49-fa052c219389"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100 과 200 의 합은 300 입니다.\n"
           ]
         }
       ]
